Comecando a fazer a tela Team

--- a/cliente/app/views/team.html
+++ b/cliente/app/views/team.html
@@ -1,92 +1,60 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+<body>
 
-        <title>Carona-me - Equipe</title>
+<div class="row">
+  <div class="col-sm-4 col-md-3">
+    <div class="team-member">
+      <img class="thumb img-circle" src="img/lewis.jpg" alt="James Lewis">
+      <h4>James Lewis</h4>
+      <span class="text-muted">Financial Director</span>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+      <div class="social-buttons">
+        <a href="#" class="social-btn sb-linkedin sb-sm"><i class="fa fa-linkedin"></i></a>
+        <a href="#" class="social-btn sb-email sb-sm"><i class="fa fa-envelope"></i></a>
+        <a href="#" class="social-btn sb-facebook sb-sm"><i class="fa fa-facebook"></i></a>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-4 col-md-3">
+    <div class="team-member">
+      <img class="thumb img-circle" src="img/williams.jpg" alt="Angela Williams">
+      <h4>Angela Williams</h4>
+      <span class="text-muted">Marketing Director</span>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+      <div class="social-buttons">
+        <a href="#" class="social-btn sb-twitter sb-sm"><i class="fa fa-twitter"></i></a>
+        <a href="#" class="social-btn sb-google-plus sb-sm"><i class="fa fa-google-plus"></i></a>
+        <a href="#" class="social-btn sb-instagram sb-sm"><i class="fa fa-instagram"></i></a>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-4 col-md-3">
+    <div class="team-member">
+      <img class="thumb img-circle" src="img/jones.jpg" alt="Edward Jones">
+      <h4>Edward Jones</h4>
+      <span class="text-muted">Chief Engineer</span>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+      <div class="social-buttons">
+        <a href="#" class="social-btn sb-twitter sb-sm"><i class="fa fa-twitter"></i></a>
+        <a href="#" class="social-btn sb-github sb-sm"><i class="fa fa-github-alt"></i></a>
+        <a href="#" class="social-btn sb-google-plus sb-sm"><i class="fa fa-google-plus"></i></a>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-4 col-md-3">
+    <div class="team-member">
+      <img class="thumb img-circle" src="img/oldman.jpg" alt="Natali Oldman">
+      <h4>Natali Oldman</h4>
+      <span class="text-muted">Art Director</span>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+      <div class="social-buttons">
+        <a href="#" class="social-btn sb-instagram sb-sm"><i class="fa fa-instagram"></i></a>
+        <a href="#" class="social-btn sb-dribbble sb-sm"><i class="fa fa-dribbble"></i></a>
+        <a href="#" class="social-btn sb-facebook sb-sm"><i class="fa fa-facebook"></i></a>
+      </div>
+    </div>
+  </div>
+</div><!-- Content End -->
 
-        <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-		<script src="bootstrap/js/bootstrap.min.js"></script>
-        <link href="css/teamAnimate.css" rel="stylesheet">
-        <link href="css/teamStyle.css" rel="stylesheet">
-        <script src="js/jquery-2.1.1.min.js"></script>
-        <script src="js/jquery.appear.js"></script>
-        <script src="js/jqBootstrapValidation.js"></script>
-        <script src="js/modernizr.custom.js"></script>
 
 
-    </head>
-
-    <body>
-        <!-- Start Team Member Section -->
-		<div class="section-modal" id="team-modal" tabindex="-1" role="dialog" aria-hidden="true">
-				<div class="close-modal" data-dismiss="modal">
-                    <div class="lr">
-                        <div class="rl">
-                        </div>
-                    </div>
-                </div>
-                <div class="container">
-                    <div class="row">
-                        <div class="section-title text-center">
-                            <h3>A nossa equipe ...</h3>
-                            <p></p>
-                        </div>
-                    </div>
-					<div class="row">
-                        <div class="col-md-3 col-sm-6">
-                            <div class="team-member">
-                                <img src="images/team/1.jpg" class="img-responsive" alt="">
-                                <div class="team-details">
-                                    <h4>Jobson Lucas</h4>
-                                    <div class="designation">Developer</div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-md-3 col-sm-6">
-                            <div class="team-member">
-                                <img src="images/team/2.jpg" class="img-responsive" alt="">
-                                <div class="team-details">
-                                    <h4>Joao Victor Mafra</h4>
-                                    <div class="designation">Developer</div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-md-3 col-sm-6">
-                            <div class="team-member">
-                                <img src="images/team/4.jpg" class="img-responsive" alt="">
-                                <div class="team-details">
-                                    <h4>Gileade Kelvin</h4>
-                                    <div class="designation">Developer</div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-md-3 col-sm-6">
-                            <div class="team-member">
-                                <img src="images/team/3.jpg" class="img-responsive" alt="">
-                                <div class="team-details">
-                                    <h4>Rafael Albuquerque</h4>
-                                    <div class="designation">Developer</div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-md-3 col-sm-6">
-                            <div class="team-member">
-                                <img src="images/team/5.jpg" class="img-responsive" alt="">
-                                <div class="team-details">
-                                    <h4>Leandro Lincoln</h4>
-                                    <div class="designation">Developer</div>
-                                </div>
-                            </div>
-                        </div>
-                    </div><!-- /.row -->
-                </div><!-- /.container -->
-
-    </body>
-
-</html>
+</body>
