--- a/cliente/app/views/team.html
+++ b/cliente/app/views/team.html
@@ -1,60 +1,42 @@
 <body>
 
-<div class="row">
-  <div class="col-sm-4 col-md-3">
-    <div class="team-member">
-      <img class="thumb img-circle" src="img/lewis.jpg" alt="James Lewis">
-      <h4>James Lewis</h4>
-      <span class="text-muted">Financial Director</span>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-      <div class="social-buttons">
-        <a href="#" class="social-btn sb-linkedin sb-sm"><i class="fa fa-linkedin"></i></a>
-        <a href="#" class="social-btn sb-email sb-sm"><i class="fa fa-envelope"></i></a>
-        <a href="#" class="social-btn sb-facebook sb-sm"><i class="fa fa-facebook"></i></a>
-      </div>
-    </div>
-  </div>
-  <div class="col-sm-4 col-md-3">
-    <div class="team-member">
-      <img class="thumb img-circle" src="img/williams.jpg" alt="Angela Williams">
-      <h4>Angela Williams</h4>
-      <span class="text-muted">Marketing Director</span>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-      <div class="social-buttons">
-        <a href="#" class="social-btn sb-twitter sb-sm"><i class="fa fa-twitter"></i></a>
-        <a href="#" class="social-btn sb-google-plus sb-sm"><i class="fa fa-google-plus"></i></a>
-        <a href="#" class="social-btn sb-instagram sb-sm"><i class="fa fa-instagram"></i></a>
-      </div>
-    </div>
-  </div>
-  <div class="col-sm-4 col-md-3">
-    <div class="team-member">
-      <img class="thumb img-circle" src="img/jones.jpg" alt="Edward Jones">
-      <h4>Edward Jones</h4>
-      <span class="text-muted">Chief Engineer</span>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-      <div class="social-buttons">
-        <a href="#" class="social-btn sb-twitter sb-sm"><i class="fa fa-twitter"></i></a>
-        <a href="#" class="social-btn sb-github sb-sm"><i class="fa fa-github-alt"></i></a>
-        <a href="#" class="social-btn sb-google-plus sb-sm"><i class="fa fa-google-plus"></i></a>
-      </div>
-    </div>
-  </div>
-  <div class="col-sm-4 col-md-3">
-    <div class="team-member">
-      <img class="thumb img-circle" src="img/oldman.jpg" alt="Natali Oldman">
-      <h4>Natali Oldman</h4>
-      <span class="text-muted">Art Director</span>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-      <div class="social-buttons">
-        <a href="#" class="social-btn sb-instagram sb-sm"><i class="fa fa-instagram"></i></a>
-        <a href="#" class="social-btn sb-dribbble sb-sm"><i class="fa fa-dribbble"></i></a>
-        <a href="#" class="social-btn sb-facebook sb-sm"><i class="fa fa-facebook"></i></a>
-      </div>
-    </div>
-  </div>
-</div><!-- Content End -->
+<div class="containerAjuste">
+  <br>
+  <h1 >DEVELOPERS</h1>
+  <hr>
+  <div class="row">
 
+    <div ng-repeat="membro in membrosTime">
+      <div class="col-md-offset-0" ng-if="$index % 3 == 0">
+      </div>
+      <div ng-class="$index % 4 != 3 ? 'col-md-3' : 'col-md-3 col-md-offset-0'">
+        <div class="panel panel-primary">
+          <div class="panel-heading" class="nome">
+            <b class="nome">Team</b>
+          </div>
+
+          <div class="panel-body">
+              <img class="img img-circle center-block" ng-src="{{membro.foto}}" height="120px" width="120px" alt="">
+              <br>
+              <h4 class="nome"><b>{{membro.nome}}</b></h4>
+            <ul class="nome">
+              <a ng-href="{{membro.github}}" class="btn btn-social-icon btn-github">
+                <span class="fa fa-github"></span>
+              </a>
+              <a  ng-href="mailto:{{ membro.mail }}"class="btn btn-social-icon btn-google">
+                <span class="fa fa-google"></span>
+              </a>
+              <a ng-href="{{membro.facebook}}" class="btn btn-social-icon btn-facebook">
+                <span class="fa fa-facebook"></span>
+              </a>
+            </ul>
+          </div><!-- col-lg-3 -->
+          </div>
+        </div>
+  </div>
+
+  </div><!-- row -->
+</div><!-- container -->
 
 
 </body>
