Tela team completa3

--- a/cliente/app/views/team.html
+++ b/cliente/app/views/team.html
@@ -7,7 +7,7 @@
   <div class="row">
 
     <div ng-repeat="membro in membrosTime">
-      <div ng-class="$index % 4 != 3 ? 'col-md-3' : 'col-md-3 col-md-offset-0'">
+      <div class="col-md-3">
         <div class="panel panel-primary">
           <div class="panel-heading" class="nome">
             <b class="nome">Team</b>
