--- a/cliente/app/views/horario.html
+++ b/cliente/app/views/horario.html
@@ -46,7 +46,7 @@
               <div class="panel-body">
                 <table class="table table-striped" id="tabelaHorario">
                   <thead>
-                  <tr style="color:#ffffff">
+                  <tr id = "colorHorario">
                     <th class="item" >Dia Semana</th>
                     <th class="item" >Aula</th>
                     <th class="item" >Tipo</th>
