--- a/cliente/app/styles/buscar.css
+++ b/cliente/app/styles/buscar.css
@@ -1,4 +1,4 @@
-#positionBusca{
+.positionBusca{
 	position:relative;
     right: -50px;
 
@@ -10,7 +10,7 @@
 
 #panelBusca{
 	position:relative;
-    right: -50px; 
+    right: -50px;
     width: 250px;
 }
 
@@ -18,11 +18,25 @@
 	font-size: 10px
 }
 
-#alignCaroname{
-	text-align: center;
-
+.alinhaBotao {
+  text-align: center;
 }
 
 #colorCaroname{
 	color: #2aabd2;
+}
+
+.containerAjuste {
+  background-color: transparent;
+  background:transparent;
+  width: 1100px;
+  text-align: center;
+  margin-top: 5px;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  padding-top: 60px;
+  font-size: 18px;
+  text-align: justify;
+
 }
