--- a/cliente/app/views/cadastro.html
+++ b/cliente/app/views/cadastro.html
@@ -24,7 +24,8 @@
 
     <div class="form-group">
       <input type="text" name = "numeroMatricula" class="form-control" placeholder="Nº Matricula"
-             title="Digite os 9 números da sua matrícula" pattern="[0-9]{9}" maxlength="9"  required ng-model="usuario.matricula">
+             title="Digite os 9 números da sua matrícula da UFCG" pattern="[1-7,9][0-1][0-6][0-1][1-4][0-9]{4}}"
+             maxlength="9"  required ng-model="usuario.matricula">
     </div>
 
     <div class="form-group">
