--- a/cliente/app/views/usuario/notificacao.html
+++ b/cliente/app/views/usuario/notificacao.html
@@ -1,4 +1,4 @@
-<body>
+<body xmlns="http://www.w3.org/1999/html">
 <div class="row" >
   <div class="col-md-12">
     <div id="bemVindo">
@@ -55,6 +55,7 @@
             <b>Aul. Prop.</b>: {{solicitacao.carona.horario.dia}}: {{solicitacao.carona.horario.aula}} <br>
             <b>Tipo</b>: {{solicitacao.carona.tipo}}<br>
             <b>Bairro</b>: {{solicitacao.carona.endereco.bairro}}<br>
+            <b>Bairro</b>: {{solicitacao.carona.endereco.rua}}<br>
             <b>Status</b>: Pendente<br>
 
           </p>
@@ -77,14 +78,14 @@
 
 <div class="container" >
   <div class="modal fade" id="myModal" role="dialog" >
-    <div class="modal-dialog modal-sm" id = "notificationPop" >
-      <div class="modal-content" id = "notificationPop">
-        <div class="modal-header" id = "notificationPopText">
-          <button type="button" class="close" data-dismiss="modal" id = "notificationPopText">&times;</button>
+    <div class="modal-dialog modal-sm notificationPop">
+      <div class="modal-content notificationPop">
+        <div class="modal-header notificationPopText">
+          <button type="button" class="close notificationPopText" data-dismiss="modal">&times;</button>
           <h4 class="modal-title">Você aceitou a carona!</h4>
         </div>
-        <div class="modal-body" id = "notificationPopText">
-          <p><center>O telefone do passageiro é :</center> <br> <center>(083) 99999-3333 </center></p>
+        <div class="modal-body notificationPopText">
+          <p id="alignText">>O telefone do passageiro é :<br> (083) 99999-3333></p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Ok</button>
@@ -92,3 +93,6 @@
       </div>
     </div>
   </div>
+</div>
+
+</body>
