Tela de notificacoes Completa

--- a/cliente/app/styles/notificacao.css
+++ b/cliente/app/styles/notificacao.css
@@ -204,9 +204,9 @@
   text-align: center;
   margin-top: 5px;
   margin-left: auto;
-  margin-right: auto;
+  margin-right: 10px;
   position: relative;
-  padding-top: 60px;
+  padding-top: 30px;
   font-size: 18px;
   text-align: justify;
 
