--- a/cliente/app/styles/horario.css
+++ b/cliente/app/styles/horario.css
@@ -47,15 +47,15 @@ body {
   /*  padding: 20px;*/
 }
 
-#colorHorario{
+.colorHorario{
     color:#ffffff;
 }
 
-#tabelaHorario{
+.tabelaHorario{
     display: block;
     height: 250px;
     padding-top: 5px;
-    overflow-y: scroll;    
+    overflow-y: scroll;
 }
 
 .item {
