--- a/cliente/app/views/usuario/horario.html
+++ b/cliente/app/views/usuario/horario.html
@@ -44,9 +44,9 @@
       <div class="tabs-container">
           <div class="tab-content" ng-show="tab == 1">
               <div class="panel-body">
-                <table class="table table-striped" id="tabelaHorario">
+                <table class="table table-striped tabelaHorario">
                   <thead>
-                  <tr id = "colorHorario">
+                  <tr class = "colorHorario">
                     <th class="item" >Dia Semana</th>
                     <th class="item" >Aula</th>
                     <th class="item" >Tipo</th>
@@ -68,6 +68,32 @@
                 </table>
               </div>
           </div>
+        <div class="tab-content" ng-show="tab == 1">
+          <div class="panel-body">
+            <table class="table table-striped tabelaHorario">
+              <thead>
+              <tr class = "colorHorario">
+                <th class="item" >Dia Semana</th>
+                <th class="item" >Aula</th>
+                <th class="item" >Tipo</th>
+                <th class="item" >Vagas</th>
+                <th class="item" >Bairro</th>
+                <th class="item" >Rua</th>
+              </tr>
+              </thead>
+              <tbody>
+              <tr ng-repeat="caro in caronas">
+                <td class="item">{{caro.horario.dia}}</td>
+                <td class="item">{{caro.horario.aula}}</td>
+                <td class="item">{{caro.tipo}}</td>
+                <td class="item">{{caro.vagas}}</td>
+                <td class="item">{{caro.endereco.bairro}}</td>
+                <td class="item">{{caro.endereco.rua}}</td>
+              </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
       </div>
       </div>
    </div>
