--- a/cliente/app/views/usuario/horario.html
+++ b/cliente/app/views/usuario/horario.html
@@ -15,18 +15,18 @@
     <br>
   </div>
 
-  <div class="col-md-2">
-    <div class="form-group">
-      <button name="salvar" class="btn btn-info center-block" data-toggle="modal" data-target="#modalCarona" ng-click="trocarRota('OferecerCarona')">
-        Oferecer Carona
-      </button>
-      <br>
-      <br>
-      <br>
-      <br>
-      <button name="salvar" class="btn btn-warning center-block" ng-click="trocarRota('gg')">
-        Buscar Carona
-      </button>
+  <div class="col-md-2"  id="fixaPanel">
+    <div class="panel panel-info">
+        <div class="form-group">
+          <button name="salvar" class="btn btn-info center-block" data-toggle="modal" data-target="#modalCarona" ng-click="trocarRota('OferecerCarona')">
+            Oferecer Carona
+          </button>
+          <br>
+          <br>
+          <button name="salvar" class="btn btn-warning center-block" ng-click="trocarRota('gg')">
+            Buscar Carona
+          </button>
+        </div>
     </div>
   </div>
 
@@ -37,8 +37,8 @@
 
       <div class="container">
       <ul class="tabs-nav">
-          <li><a ng-click="tab=1" ng-class="{'active' : tab==1}">Motorista</a></li>
-          <li><a ng-click="tab=2" ng-class="{'active' : tab==2}">Passageiro</a></li>
+          <li><a ng-click="horariosMotoristas()" ng-class="{'active' : tab==1}">Motorista</a></li>
+          <li><a ng-click="horariosPassageiro()" ng-class="{'active' : tab==2}">Passageiro</a></li>
       </ul>
 
       <div class="tabs-container">
@@ -68,7 +68,7 @@
                 </table>
               </div>
           </div>
-        <div class="tab-content" ng-show="tab == 1">
+        <div class="tab-content" ng-show="tab == 2">
           <div class="panel-body">
             <table class="table table-striped tabelaHorario">
               <thead>
@@ -77,7 +77,6 @@
                 <th class="item" >Aula</th>
                 <th class="item" >Tipo</th>
                 <th class="item" >Vagas</th>
-                <th class="item" >Bairro</th>
                 <th class="item" >Rua</th>
               </tr>
               </thead>
@@ -87,7 +86,6 @@
                 <td class="item">{{caro.horario.aula}}</td>
                 <td class="item">{{caro.tipo}}</td>
                 <td class="item">{{caro.vagas}}</td>
-                <td class="item">{{caro.endereco.bairro}}</td>
                 <td class="item">{{caro.endereco.rua}}</td>
               </tr>
               </tbody>
