--- a/cliente/app/styles/inicio/main.css
+++ b/cliente/app/styles/inicio/main.css
@@ -113,6 +113,20 @@ input[readonly] {
   color: white;
 }
 
+.almostJumbotron{
+  background-color: transparent;
+  background:transparent;
+  width: 400px;
+  margin-top: 60px;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  padding-top: 60px;
+  font-size: 14px;
+  text-align: left;
+
+}
+
 .center {
   text-align: center;
   position: absolute;
