--- a/cliente/app/views/usuario/notificacao.html
+++ b/cliente/app/views/usuario/notificacao.html
@@ -60,7 +60,7 @@
 
             </p>
             <br>
-            <div style="text-align: center;">
+            <div id = "alignText">
 
               <button type="button" data-ng-click="aceitarSolicitacao(solicitacao)" data-toggle="modal" data-target="#myModal" id = "aceitarCarona" class="btn btn-default">
                 Aceitar
