Termino ou quase

--- a/cliente/app/views/usuario/carona.html
+++ b/cliente/app/views/usuario/carona.html
@@ -81,7 +81,7 @@
                 <button name="salvar" data-ng-disabled="form.rua.$error.required" class="btn btn-success center-block" ng-click="salvarCarona()">
                     Salvar
                 </button>
-                <button name="salvar" class="btn btn-danger center-block" ng-click="trocarRota('buscar')">
+                <button name="cancelar" class="btn btn-danger center-block" ng-click="cancelar()">
                     Cancelar
                 </button>
             </div>
