--- a/cliente/app/views/usuario/home.html
+++ b/cliente/app/views/usuario/home.html
@@ -1,10 +1,10 @@
 <div class = telaHome>
-  <div class="panel panel-primary" id="panelHome">>
+  <div class="panel panel-primary" id="panelHome">
   <div class="panel-body">
     <div>
       <br><br>
       <div class="col-md-12">
-        <img id="minhaImagem" ngf-thumbnail="teste" class= "img-circle" class="img-responsive"
+        <img id="minhaImagem" ngf-thumbnail="foto || 'images/team/default-avatar.png'" class= "img-circle" class="img-responsive"
              height="200" width="200">
       </div>
       <div class="col-md-12">
@@ -14,7 +14,7 @@
       <div class="col-md-12">
         <form name="form">
           <div class="button" ngf-select="upload($file)" ng-model="file" name="file" ngf-pattern="'image/*'"
-               ngf-accept="'image/*'" ngf-max-size="20MB" ngf-min-height="100"
+               ngf-accept="'image/*'" ngf-max-size="20MB"
                ngf-resize="{width: 200, height: 200}">
             <span class="file-input btn btn-primary btn-file">
                 Mudar Foto
