--- a/cliente/app/styles/usuario/notificacao.css
+++ b/cliente/app/styles/usuario/notificacao.css
@@ -203,10 +203,11 @@
   width: 1100px;
   text-align: center;
   margin-top: 5px;
-  margin-left: auto;
-  margin-right: 10px;
+  margin-left: 100px;
+  margin-right: auto;
   position: relative;
   padding-top: 30px;
+  padding-left: 30px;
   font-size: 18px;
   text-align: justify;
 
