--- a/cliente/app/views/inicio/cadastro.html
+++ b/cliente/app/views/inicio/cadastro.html
@@ -33,8 +33,8 @@
     </div>
 
     <div class="form-group">
-      <input type="text" name = "bairro" pattern=".{4,}" class="form-control"
-             placeholder="Bairro" required ng-model="usuario.endereco.bairro">
+      <select class="form-control" ng-model="usuario.endereco.bairro" ng-options="opt.value for opt in bairros">
+      </select>
     </div>
 
     <div class="form-group">
