--- a/cliente/app/views/inicio/cadastro.html
+++ b/cliente/app/views/inicio/cadastro.html
@@ -9,6 +9,9 @@
   <form name="form">
 
     <div class="form-group">
+      <div data-ng-show="error" class="alert alert-danger">
+        {{errorMessage}}
+      </div>
       <input type="text" name = "nome" class="form-control" placeholder="Nome" required ng-model="usuario.nome">
     </div>
     <div class="form-group">
@@ -41,6 +44,7 @@
       <input type="text" name = "telefone" class="form-control" placeholder="Telefone sem ddd" maxlength="9"
              pattern="[0-9]{8,9}" title="Digite os números do seu telefone" required ng-model="usuario.telefone">
     </div>
+
 
     <input type="submit" class="btn btn-default" value="Ok" data-ng-disabled="form.nome.$error.required ||
               form.email.$error.required || form.senha.$error.required || form.numeroMatricula.$error.required ||
