--- a/cliente/app/views/inicio/cadastro.html
+++ b/cliente/app/views/inicio/cadastro.html
@@ -17,7 +17,7 @@
     <div class="form-group">
       <input type="email" name = "email" class="form-control" placeholder="Email"
              title="Preencha com um email válido. Exemplo caroname@caroname.com"
-             required ng-model="usuario.email" ng-if="off">
+             required ng-model="usuario.email">
     </div>
 
     <div class="form-group">
