ajustes + servico de notificacao no backend

--- a/cliente/app/views/usuario/notificacao.html
+++ b/cliente/app/views/usuario/notificacao.html
@@ -27,7 +27,7 @@
 <div class="col-md-2">
   <div id='cssmenu'>
     <ul>
-      <li> <a class="button hvr-bounce-to-bottom" ng-click="solicitacoesRejeitadas()" ><span>CARONAS REJEITADAS</span></a> </li>
+   <!--   <li> <a class="button hvr-bounce-to-bottom" ng-click="solicitacoesRejeitadas()" ><span>CARONAS REJEITADAS</span></a> </li> -->
       <li> <a class="button hvr-bounce-to-left"  ng-click="tabs=1"><span>CARONAS PENDENTES</span></a> </li>
     </ul>
   </div>
