criação da tela de solicitação e sua respectiva rota

--- a/cliente/app/views/usuario/solicitacao.html
+++ b/cliente/app/views/usuario/solicitacao.html
@@ -2,9 +2,9 @@
 <div class="row" >
   <div class="col-md-12">
     <div id="bemVindo">
-      <h3>Bem-vindo à página de Notificações!</h3>
+      <h3>Bem-vindo à página de Solicitações!</h3>
       <br>
-      <h4>Aqui você encontra os pedidos recebidos de caronas, aceitos e rejeitados.</h4>
+      <h4>Aqui você encontra os pedidos recebidos de caronas que estão pendentes.</h4>
     </div>
   </div>
 
