--- a/cliente/app/views/usuario/notificacao.html
+++ b/cliente/app/views/usuario/notificacao.html
@@ -1,5 +1,6 @@
 <body xmlns="http://www.w3.org/1999/html">
 <div class="row" >
+
   <div class="col-md-12">
     <div id="bemVindo">
       <h3>Bem-vindo à página de Notificações!</h3>
@@ -19,90 +20,20 @@
     </ul>
   </div>
 </div>
-
-
-<div class="col-md-2">
-  <div id='cssmenu'>
-    <ul>
-   <!--   <li> <a class="button hvr-bounce-to-bottom" ng-click="solicitacoesRejeitadas()" ><span>CARONAS REJEITADAS</span></a> </li> -->
-      <li> <a class="button hvr-bounce-to-left"  ng-click="tabs=1"><span>CARONAS PENDENTES</span></a> </li>
-    </ul>
-  </div>
-</div>
-<div class="containerNotificacao">
-  <div class="row" id = "news" ng-if="tabs==1">
-    <div ng-repeat="solicitacao in solicitacoes">
-      <div class="col-md-2 col-md-offset-1">
-        <div class="panel panel-primary"  id = "panelNotification">
-          <div class="panel-heading">
-            <b>Carona-me</b>
-          </div>
-          <div class="panel-body">
-            <a href="../html-link.htm">
-              <div align="middle">
-                <img src="http://lorempixel.com/140/140/" class= "img-circle" class="img-responsive"
-                     height="70" width="70" >
-              </div>
-            </a>
-            <p></p>
-            <p id="fonteNotification">
-              <b>Nome</b>: {{solicitacao.passageiro.nome}} &nbsp &nbsp<br>
-              <b>Aul. Prop.</b>: {{solicitacao.carona.horario.dia}}: {{solicitacao.carona.horario.aula}} <br>
-              <b>Tipo</b>: {{solicitacao.carona.tipo}}<br>
-              <b>Bairro</b>: {{solicitacao.carona.endereco.bairro}}<br>
-              <b>Rua</b>: {{solicitacao.carona.endereco.rua}}<br>
-              <b>Vagas</b>: {{solicitacao.carona.vagas}}<br>
-              <b>Status</b>: Pendente<br>
-
-            </p>
-            <br>
-            <div id = "alignText">
-
-              <button type="button" ng-click="aceitarSolicitacao(solicitacao)" data-toggle="modal" data-target="#myModal" id = "aceitarCarona" class="btn btn-default">
-                Aceitar
-              </button>
-              <button type="button" id = "rejeitarCarona" ng-click="rejeitarPedido(solicitacao)" class="btn btn-default">
-                Rejeitar
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="col-md-4 col-md-offset-3" ng-if="tabs==2">
-    <table class="table table-striped tabelaHorario">
-      <thead>
-      <tr class = "colorHorario">
-        <th>Notificacoes</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr ng-repeat="mensagem in mensagens">
-        <td>{{mensagem}}</td>
-      </tr>
-      </tbody>
-    </table>
-   </div>
-</div>
-
 <div class="container">
-  <div class="modal fade" id="myModal" role="dialog" >
-    <div class="modal-dialog modal-sm notificationPop">
-      <div class="modal-content notificationPop">
-        <div class="modal-header notificationPopText">
-          <button type="button" class="close notificationPopText" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Você aceitou a carona!</h4>
-        </div>
-        <div class="modal-body notificationPopText">
-          <p id="alignText">O telefone do passageiro é :<br> (083) {{telefone}}></p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Ok</button>
-        </div>
-      </div>
+  <div class="list-group">
+    <div id = "mydiv" style = "width: 600px;">
+      <a class="list-group-item" style = "color: rgb(0,121,192); left: 200px;">The book is on the table.<span title = "Descartar Notificação" onclick="hide('mydiv')" class="badge">x</span></a>
     </div>
   </div>
 </div>
+
+<script type="text/javascript">
+  function hide(target) {
+    document.getElementById(target).style.display = 'none';
+  }
+
+</script>
 
 </body>
+
