--- a/cliente/app/styles/usuario/horario.css
+++ b/cliente/app/styles/usuario/horario.css
@@ -30,12 +30,18 @@ body {
     border-radius: 3px 3px 0 0;
     font-size: 12px;
     color: #fff;
-    background: rgba(20, 144, 64, 0.7);
+    background: rgb(0,121,192);
 }
 
+.tabs-nav a:hover {
+  color: #fff;
+}
+
+
+
 .tabs-nav .active {
-    background: #fff;
-    color: rgba(20, 144, 64, 0.7);
+    background: rgb(0,121,140);
+    color: #fff;
     border-bottom: 1px solid #fff;
     margin-bottom: -1px;
 }
